--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,3 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+"I wonder what the line at B-Plate is like" is a line all to familiar with the UCLA student body. Today I set out to tackle that problem once and for all. I have built a web application that allows users to see how crowded the on-campus eateries are based on crowdsourced information. Now anyone can get a sneak peak at the current load the dining halls are experiencing simply by navigating to https://dining-hall-load.herokuapp.com/ on their mobile devices.
